pic error resolved

--- a/TributePage/code/TributeSite.html
+++ b/TributePage/code/TributeSite.html
@@ -18,7 +18,7 @@
         <div class="content">
             <section class="top_section">
                 <div class="img_box">
-                    <a href="/code/index.html"><img src="/assets/latajipic.jpg" alt="Lata Ji's Pic"></a>
+                    <a href="/code/index.html"><img src="/TributePage/assets/latajipic.jpg" alt="Lata Ji's Pic"></a>
                 </div>
                 <div>
                     <a href="#lata"><h1>Lata Mangeshkar</h1></a>
