--- a/LandingPage/code/landingpage.html
+++ b/LandingPage/code/landingpage.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page!!</title>
+    <title>Developer - Landing Page</title>
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
-    
+    <section class="title-section">
+        <div class="text-box">
+            <h2><span class="lg-text">Hi</span>, I am <span class="name">Nikhil Sharma<span></h2>
+            <h1 class="lg-text">FULL STACK DEVELOPER</h1>
+        </div>
+    </section>
+    <section class="black-section">
+        <h2>WORK, I CAN DO FOR <span>YOU</span></h2>
+    </section>
+    <section class="work">
+        <div class="grid-items">
+            <div class="card">
+                <div class="image-container">
+                    <img src="/LandingPage/assets/web.jpg" alt="Web Dev">
+                </div>
+                <div class="card-content">
+                    <h3>Web Development</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi placeat quos iusto assumenda ratione blanditiis iure quidem possimus repudiandae rerum.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-items">
+            <div class="card">
+                <div class="image-container">
+                    <img src="/LandingPage/assets/mobile.jpg" alt="App Dev">
+                </div>
+                <div class="card-content">
+                    <h3>App Development</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi veniam aperiam ducimus quaerat sed animi odit similique velit soluta nobis.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-items">
+            <div class="card">
+                <div class="image-container">
+                    <img src="/LandingPage/assets/uiux.jpg" alt="Design">
+                </div>
+                <div class="card-content">
+                    <h3>UI/UX Design</h3>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolores sapiente nulla eos, consequuntur ullam provident assumenda alias adipisci molestiae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bottom-section">
+        <div class="contact">
+            <h2>Contact Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, impedit sunt? Repellendus sed inventore eveniet esse amet soluta magni pariatur.</p>
+            <p>Contact me on: <a href="https://twitter.com/Sharma_Nikh12" target="_blank">Twitter</a></p>
+            <p>Connect with me on: <a href="https://www.linkedin.com/in/nikhil-sharma-41a287226/" target="_blank">LinkedIn</a></p>
+        </div>
+        <div class="about">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum, quas optio provident odit laboriosam eveniet rem corporis sunt quasi!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum, quas optio provident odit laboriosam eveniet rem corporis sunt quasi!</p>
+        </div>
+    </section>
+    <footer>
+        Made By <span class="name"><a href="https://github.com/NikhilCode12" target="_blank">Nikhil Sharma</a></span>
+    </footer>
 </body>
 </html>
