job form created

--- a/JobApplication/code/applicationjob.html
+++ b/JobApplication/code/applicationjob.html
@@ -50,7 +50,7 @@
                             <option value="uiux">UI UX Designer</option>
                         </select>
                     </div>
-                    <div class="form_control">
+                    <div class="textarea_control">
                         <label for="address">Address</label>
                         <textarea 
                             id="address" 
